--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "my-profile-app",
-    "version": "1.0.0",
-    "main": "index.js",
-    "scripts": {
-      "start": "node index.js"
-    },
-    "dependencies": {
-      "express": "^4.18.2"
-    }
+  "name": "profile-app",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "pg": "^8.11.1"
   }
-  
+}
